Fix Crypto 包名冲突

--- a/QuickDevelopingDocs/4_添加至框架内.md
+++ b/QuickDevelopingDocs/4_添加至框架内.md
@@ -7,7 +7,7 @@
 然后在`ui_Crypto.py`的文件头部
 
 ```python
-from Crypto.<模块文件夹>.<工具名称>Module import <工具名称>Panel
+from CryptoPanel.<模块文件夹>.<工具名称>Module import <工具名称>Panel
 ```
 
 并在`ui_Crypto.py`的`ui_CryptoPanel`中`__init__`函数尾部
